added refinance calculator

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -109,6 +109,9 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
     }
   }
 }
+.ddBVxL {
+    display: none;
+  }
 .hero-title-col {
   position: relative;
   &:after {
