--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3626,8 +3626,9 @@ p.testimonials-name {
   }
   .split_section {
     .split_image {
-      height: 70vh;
+      height: 60vh;
       margin-bottom: 30px;
+      margin-top: 50px;
       object-fit: cover;
       width: 100%;
     }
