--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2954,36 +2954,36 @@ p.testimonials-name {
   display: none;
 }
 @media all and (max-width: 820px) {
-  .info-table {
-      thead {
-        display: none;
-      }
+  // .info-table {
+  //     thead {
+  //       display: none;
+  //     }
 
-      tbody, tr, td {
-        display: block;
-        width: 100%;
-      }
+  //     tbody, tr, td {
+  //       display: block;
+  //       width: 100%;
+  //     }
 
-      tr {
-        margin-bottom: 15px;
-      }
+  //     tr {
+  //       margin-bottom: 15px;
+  //     }
 
-      td {
-        text-align: left;
-        padding-left: 50%;
-        position: relative;
+  //     td {
+  //       text-align: left;
+  //       padding-left: 50%;
+  //       position: relative;
 
-        &:before {
-          content: attr(data-label);
-          position: absolute;
-          left: 0;
-          width: 45%;
-          padding-left: 15px;
-          font-weight: bold;
-          white-space: nowrap;
-        }
-      }
-    }
+  //       &:before {
+  //         content: attr(data-label);
+  //         position: absolute;
+  //         left: 0;
+  //         width: 45%;
+  //         padding-left: 15px;
+  //         font-weight: bold;
+  //         white-space: nowrap;
+  //       }
+  //     }
+  //   }
   .navbar-nav {
     ul {
       li {
