--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -493,9 +493,77 @@ body {
         ul.submenu-loc {
           display: grid;
         }
+        ul.submenu_level {
+          display: grid;
+        }
       }
 
       ul {
+        &.submenu_level{
+          display: none;
+          grid-template-columns: repeat(1, minmax(220px, 1fr));
+          grid-template-rows: auto;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          z-index: 99;
+          background: #fff;
+          padding: 2px;
+          font-size: 14px;
+          li {
+            box-sizing: border-box;
+            position: relative;
+
+            &:hover {
+              ul.submenu-child {
+                display: grid;
+              }
+            }
+
+            span.sublink {
+              padding: 2px;
+              display: block;
+              cursor: pointer;
+              text-transform: uppercase;
+              border-bottom: 2px solid $color-secondary;
+
+              &:hover {
+                background: $color-secondary;
+                color: $color-white;
+              }
+            }
+
+            ul.submenu-child {
+              z-index: 1000;
+              display: none;
+              position: absolute;
+              top: 0;
+              left: 100%;
+              background: #fff;
+              width: 100%;
+              min-width: 100px;
+
+              li {
+                width: 100%;
+
+                span.sublink {
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  cursor: pointer;
+                  text-transform: uppercase;
+                  font-size: 12px;
+                  border-bottom: 2px solid $color-secondary;
+
+                  &:hover {
+                    background: $color-secondary;
+                    color: $color-white;
+                  }
+                }
+              }
+            }
+          }
+        }
         &.submenu,
         &.submenu-loc {
           display: none;
