--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3699,6 +3699,7 @@ p.testimonials-name {
       margin-top: 50px;
       object-fit: cover;
       width: 100%;
+      background-color: #ffffff;
     }
   }
   .cta_section .cta_first {
