--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1411,18 +1411,18 @@ footer {
 .faq_section {
   background-repeat: no-repeat;
   background-size: 84% auto;
-  background-position: left center;
+  background-position: right center;
   width: 100%;
   height: 500px;
   display: flex;
   margin: 50px 0;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: flex-start;
   .faq_text {
     margin-bottom: 40px;
     text-align: center;
     position: relative;
-    left: -70px;
+    left: 0;
     top: 65px;
     position: relative;
     &:before {
