added location menu fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -637,7 +637,7 @@ body {
           grid-template-rows: auto;
           position: absolute;
           top: 100%;
-          left: 0;
+          left: -280px;
           z-index: 99;
           background: #fff;
           padding: 2px;
