added location fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -984,7 +984,7 @@ body {
   p {
     width: 80%;
     font-family: "AvenirBook";
-    padding: 20px;
+    padding: 5px 30px;
     font-size: 18px;
     color: $color-white;
     // position: absolute;
