added new blog pages and author

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 
 @import "variables";
 @import "typography";
-
+@import "tailwindcss";
 button.react-multiple-carousel__arrow.react-multiple-carousel__arrow-right {
   position: absolute;
   right: -8px;
