--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -28,9 +28,23 @@ $color-mid-gray: #606060;
   src: url("AvenirLTStd-Roman.otf");
   font-display: swap;
 }
+@font-face {
+  font-family: "Open Sans";
+  src: url("OpenSans_Condensed-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+@font-face {
+  font-family: "HelveticaNeue";
+  src: url("Helvetica-Neue.woff2") format("woff2");
+  font-display: swap;
+}
+@font-face {
+  font-family: "RB Magnat Neue";
+  src: url("RB-Magnat-Neue-Test.woff2") format("woff2");
+  font-display: swap;
+}
 
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-  sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+$font-family: -apple-system, BlinkMacSystemFont, "Open Sans",  "RB Magnat Neue", Arial, "HelveticaNeue", "Apple Color Emoji", "Segoe UI Emoji";
 $font-weight-normal: 300;
 $font-weight-bold: 600;
 
