added new content

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -324,6 +324,15 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
     }
   }
 }
+.font-rb{
+  font-family: "RB Magnat Neue";
+}
+.font-hlv{
+  font-family: "HelveticaNeue";
+}
+.font-sans{
+  font-family: "Open Sans";
+}
 .tab-btn {
   // margin: 40px 0px 0px 40px;
   display: flex;
