added new content

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -333,6 +333,9 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
 .font-sans{
   font-family: "Open Sans";
 }
+.font-oswald{
+  font-family: "Oswald";
+}
 .tab-btn {
   // margin: 40px 0px 0px 40px;
   display: flex;
