--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,6 +34,11 @@ $color-mid-gray: #606060;
   font-display: swap;
 }
 @font-face {
+  font-family: "Oswald";
+  src: url("Oswald-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+@font-face {
   font-family: "HelveticaNeue";
   src: url("Helvetica-Neue.woff2") format("woff2");
   font-display: swap;
@@ -44,7 +49,7 @@ $color-mid-gray: #606060;
   font-display: swap;
 }
 
-$font-family: -apple-system, BlinkMacSystemFont, "Open Sans",  "RB Magnat Neue", Arial, "HelveticaNeue", "Apple Color Emoji", "Segoe UI Emoji";
+$font-family: -apple-system, BlinkMacSystemFont, "Open Sans", "Oswald","RB Magnat Neue", Arial, "HelveticaNeue", "Apple Color Emoji", "Segoe UI Emoji";
 $font-weight-normal: 300;
 $font-weight-bold: 600;
 
