--- a/src/scss/components/Hero.module.scss
+++ b/src/scss/components/Hero.module.scss
@@ -20,15 +20,24 @@
 }
 
 .hero {
-  background-color: $color-dark-gray;
-  background-position: 100% 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: $color-white;
-  padding: 7em 0 9em;
   position: relative;
   height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+
+  .backgroundImage {
+    z-index: 0;
+    object-fit: cover;
+  }
+
+  .wrap {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+  }
 }
+
 
 .wrap {
   margin: 20px auto;
