--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,10 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   width: 19px;
   display: block;
 }
+
+ul{
+  list-style-type: square;
+}
 // BlogAuthor.scss
 .blog-author-card {
   padding: 2rem;
