--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -41,10 +41,10 @@ p {
 }
 
 a {
-	color: $color-primary;
+	color: $color-secondary;
 }
 
 a:focus,
 a:hover {
-	color: lighten($color-primary, 15);
+	color: lighten($color-secondary, 15);
 }
