new ui designs fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2081,8 +2081,8 @@ textarea {
   position: relative;
   height: 47px;
   line-height: 47px;
-  border: 2px solid #e3e3e3;
-  background-color: #e3e3e3;
+  border: 2px solid #f9fbfc;
+  background-color: #f9fbfc;
   width: 100%;
   margin-bottom: 16px;
   padding: 0 16px;
