new ui designs fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2081,12 +2081,12 @@ textarea {
   position: relative;
   height: 47px;
   line-height: 47px;
-  border: 2px solid #f9fbfc;
-  background-color: #f9fbfc;
+  border: 2px solid #d6d6da;
+  // background-color: #f9fbfc;
   width: 100%;
   margin-bottom: 16px;
   padding: 0 16px;
-  color: #7a7a7a;
+  // color: #7a7a7a;
   -webkit-transition: border-color 0.3s ease-in-out;
   -moz-transition: border-color 0.3s ease-in-out;
   -ms-transition: border-color 0.3s ease-in-out;
