--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,9 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left {
   width: 19px;
   display: block;
 }
-
+body {
+  font-size: 17px !important;
+}
 ul {
   list-style-type: square;
 }
