--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,17 @@
+// Grow animation for buttons
+button,
+.btn,
+.apply-button {
+  transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
+button:hover,
+.btn:hover,
+.apply-button:hover,
+button:focus,
+.btn:focus,
+.apply-button:focus {
+  transform: scale(1.07);
+}
 // CSS for use on every page. Added with normalize.css in pages/_app.tsx.
 
 @import "variables";
