--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -456,6 +456,30 @@ a[href^="http"] {
     }
   }
 }
+.tb-btn-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  .HeadBtn {
+    width: 100%;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    color: $color-secondary;
+    // color: $color-secondary;
+    font-family: "AvenirBlack";
+    background: $color-white;
+    // background: transparent;
+    border: 1px solid $color-primary;
+    // border: 2px solid $color-black;
+    text-transform: uppercase;
+    &:hover {
+      background: $color-black;
+      color: $color-secondary;
+      border: 1px solid $color-primary;
+    }
+  }
+}
 .tb-btn {
   display: flex;
   align-items: center;
