feat(adding-newlayout): adding new layouts in this section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1184,7 +1184,7 @@ body {
   position: relative;
   h2 {
     font-family: "AvenirBook";
-    padding: 50px;
+    padding: 25px 25px 10px 25px;
     font-size: 70px;
     color: $color-white;
     // position: absolute;
